test/spec_vectors/simd_boolean/fail/module_17.wat
(module (func $i32x4.all_true-arg-empty (result v128) (i32x4.all_true)))